--- a/config/sync/core.entity_view_display.node.article.teaser.yml
+++ b/config/sync/core.entity_view_display.node.article.teaser.yml
@@ -8,7 +8,7 @@ dependencies:
     - field.field.node.article.comment
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
-    - image.style.medium
+    - image.style.portrait_320x200
     - node.type.article
   module:
     - image
@@ -34,7 +34,7 @@ content:
     weight: -1
     region: content
     settings:
-      image_style: medium
+      image_style: portrait_320x200
       image_link: content
     third_party_settings: {  }
     label: hidden
@@ -49,7 +49,7 @@ content:
   links:
     weight: 100
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   comment: true
-  field_image: true
-  field_tags: true
