--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal/admin_toolbar": "^1.19",
         "drupal/console": "~1.0",
         "drupal/core": "~8.0",
+        "drupal/module_filter": "^3.0",
         "drush/drush": "~8.0",
         "webflo/drupal-finder": "^0.3.0",
         "webmozart/path-util": "^2.3"
