--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "drupal/console": "~1.0",
         "drupal/core": "~8.0",
         "drupal/module_filter": "^3.0",
+        "drupal/pathauto": "^1.0",
         "drush/drush": "~8.0",
         "webflo/drupal-finder": "^0.3.0",
         "webmozart/path-util": "^2.3"
