--- a/config/sync/user.settings.yml
+++ b/config/sync/user.settings.yml
@@ -1,4 +1,4 @@
-anonymous: Anonymous
+anonymous: Guest
 verify_mail: true
 notify:
   cancel_confirm: true
@@ -9,10 +9,10 @@ notify:
   register_admin_created: true
   register_no_approval_required: true
   register_pending_approval: true
-register: visitors_admin_approval
-cancel_method: user_cancel_block
+register: visitors
+cancel_method: user_cancel_reassign
 password_reset_timeout: 86400
-password_strength: true
+password_strength: false
 langcode: en
 _core:
   default_config_hash: r4kwhOM0IWXVMUZDz744Yc16EOh37ZhYbA8kGOhSmLk
