Added some user roles and added some permissions to them

--- a/config/sync/search.page.node_search.yml
+++ b/config/sync/search.page.node_search.yml
@@ -7,9 +7,11 @@ dependencies:
 _core:
   default_config_hash: 97tvtzGOa8_flb22CzSjgtm_YkiGMHvEBO-6q2K9V_U
 id: node_search
-label: Content
+label: 'Site search'
 path: node
 weight: -10
 plugin: node_search
 configuration:
-  rankings: {  }
+  rankings:
+    promote: 5
+    recent: 10
