--- a/config/sync/core.entity_view_display.node.article.full.yml
+++ b/config/sync/core.entity_view_display.node.article.full.yml
@@ -11,7 +11,7 @@ dependencies:
     - field.field.node.article.field_category
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
-    - image.style.medium
+    - image.style.black_and_white_thumbnail
     - node.type.article
   module:
     - comment
@@ -54,7 +54,7 @@ content:
     weight: 1
     region: content
     settings:
-      image_style: medium
+      image_style: black_and_white_thumbnail
       image_link: ''
     third_party_settings: {  }
     label: hidden
