Added example module and enabled few of them

--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -10,11 +10,11 @@ dependencies:
     - field.field.node.article.field_category
     - field.field.node.article.field_image
     - field.field.node.article.field_tags
-    - image.style.medium
     - node.type.article
+    - responsive_image.styles.wide
   module:
     - comment
-    - image
+    - responsive_image
     - text
     - user
 _core:
@@ -49,11 +49,11 @@ content:
     type: entity_reference_label
     region: content
   field_image:
-    type: image
+    type: responsive_image
     weight: 1
     region: content
     settings:
-      image_style: medium
+      responsive_image_style: wide
       image_link: ''
     third_party_settings: {  }
     label: hidden
