--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "drupal/admin_toolbar": "^1.19",
         "drupal/console": "~1.0",
         "drupal/core": "~8.0",
+        "drupal/examples": "1.x-dev",
         "drupal/module_filter": "^3.0",
         "drupal/pathauto": "^1.0",
         "drupal/views_accordion": "^1.0",
