--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -17,6 +17,7 @@ module:
   ctools: 0
   datetime: 0
   dblog: 0
+  dynamic_entity_reference: 0
   dynamic_page_cache: 0
   editor: 0
   examples: 0
@@ -41,6 +42,7 @@ module:
   path: 0
   quickedit: 0
   rdf: 0
+  relation: 0
   responsive_image: 0
   search: 0
   shortcut: 0
