--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -20,6 +20,7 @@ module:
   dynamic_entity_reference: 0
   dynamic_page_cache: 0
   editor: 0
+  entity_reference_revisions: 0
   examples: 0
   fapi_example: 0
   field: 0
@@ -43,6 +44,7 @@ module:
   quickedit: 0
   rdf: 0
   relation: 0
+  relation_devel: 0
   responsive_image: 0
   search: 0
   shortcut: 0
@@ -62,6 +64,7 @@ module:
   menu_link_content: 1
   pathauto: 1
   views: 10
+  paragraphs: 11
   standard: 1000
 theme:
   stable: 0
