--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "drupal/core": "~8.0",
         "drupal/examples": "1.x-dev",
         "drupal/media_entity": "^1.6",
+        "drupal/media_entity_image": "^1.2",
         "drupal/module_filter": "^3.0",
         "drupal/paragraphs": "^1.1",
         "drupal/pathauto": "^1.0",
