--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "drupal/pathauto": "^1.0",
         "drupal/relation": "2.x-dev",
         "drupal/views_accordion": "^1.0",
+        "drupal/views_slideshow": "^4.5",
         "drush/drush": "~8.0",
         "webflo/drupal-finder": "^0.3.0",
         "webmozart/path-util": "^2.3"
